deployments/kube-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-mongodb-service
spec:
  selector:
    app: media-mongodb
  ports:
    - port: 27017
      name: mongo
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-mongodb
  labels:
    version: v1
spec:
  selector:
    matchLabels:
      app: media-mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: media-mongodb
        version: v1
    spec:
      containers:
        - image: mongo:3.6.15-xenial
          name: mongodb
          ports:
            - containerPort: 27017
      volumes:
        - name: media-persistent-storage
          persistentVolumeClaim:
            claimName: media-mongodb-pv-claim
