deployments/kube-nodejs-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-node-service
spec:
  selector:
    app: mongdb-webservice
  ports:
    - port: 4000
      name: http
      targetPort: 4000
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongdb-webservice
  labels:
    version: v1
spec:
  selector:
    matchLabels:
      app: mongdb-webservice
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongdb-webservice
        version: v1
    spec:
      containers:
        - image: gold96tendy/leaseit_media-service:0.0.1
          name: node-mongo-alpine
          ports:
            - containerPort: 4000
