deployments/kube-nodejs-postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgresdb-node
---
apiVersion: v1
kind: Service
metadata:
  name: postgresdb-node-service
  namespace: postgresdb-node
spec:
  selector:
    app: postgresdb-node-service
  ports:
    - port: 3000
      targetPort: 3000
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-postgresdb-querier
  namespace: postgresdb-node
spec:
  selector:
    matchLabels:
      app: postgresdb-webservice
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgresdb-webservice
    spec:
      containers:
        - image: gold96tendy/leaseit:postgres-service_alpine
          name: node-postgres-alpine
          ports:
            - containerPort: 3000
