deployments/kube-postgresdb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-postgres-service
spec:
  selector:
    app: user-postgresdb
  ports:
    - port: 35432
      targetPort: 3542
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-postgres-alpine
spec:
  selector:
    matchLabels:
      app: user-postgresdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: user-postgresdb
    spec:
      containers:
        - image: postgres:alpine
          name: postgresdb
          ports:
            - containerPort: 27017
      volumes:
        - name: user-persistent-storage
          persistentVolumeClaim:
            claimName: user-postgres-pv-claim
