deployments/node-istio-media.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: media-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 4001
      name: node-media
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: media-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - media-gateway
  http:
  - match:
    - port: 4001
    route:
    - destination:
        host: mongodb-node-service
        port:
          number: 3000
